# TerminalIntegrationDocs

./: .gitignore  README.md  RFC-STYLE-GUIDE.md  create-gitignore.sh
examples/cpp/: .gitignore  BUILD_SUMMARY.md  CHANGELOG_MONEY.md  CMakeLists.txt  CPP_VS_CSHARP.md  DOCS_UPDATE_SUMMARY.md  MONEY_IMPLEMENTATION.md  NO_DOUBLE_POLICY.md  QUICKSTART.md  README.md  build.bat  build.sh
examples/cpp/docs/: money_formatting_example.cpp  money_precision_example.cpp
examples/cpp/logos_payment_cli_host/: cli_parser.cpp  cli_parser.h  main.cpp
examples/cpp/logos_payment_cli_host/commands/: authorize_command.cpp  authorize_command.h  get_payment_command.cpp  get_payment_command.h
examples/cpp/logos_payment_core/application/container/: service_container.h
examples/cpp/logos_payment_core/application/contracts/: authorize_payment_request.h  authorize_payment_response.h  get_payment_response.h
examples/cpp/logos_payment_core/application/use_cases/: authorize_payment_use_case.cpp  authorize_payment_use_case.h  get_payment_use_case.cpp  get_payment_use_case.h
examples/cpp/logos_payment_core/capabilities/: fraud_detection_service.h  payment_repository.h
examples/cpp/logos_payment_core/domain/services/: payment_authorization_service.cpp  payment_authorization_service.h
examples/cpp/logos_payment_core/shared_kernel/: money.cpp  money.h  payment_record.h  payment_status.h
examples/cpp/logos_payment_infrastructure/: in_memory_payment_repository.cpp  in_memory_payment_repository.h  simple_fraud_detection_service.cpp  simple_fraud_detection_service.h
examples/cpp/logos_payment_service_adapters/: in_memory_payment_repository.cpp  in_memory_payment_repository.h  simple_fraud_detection_service.cpp  simple_fraud_detection_service.h
examples/cpp/logos_payment_service_application/container/: service_container.h
examples/cpp/logos_payment_service_application/contracts/: authorize_payment_request.h  authorize_payment_response.h  get_payment_response.h
examples/cpp/logos_payment_service_application/use_cases/: authorize_payment_use_case.cpp  authorize_payment_use_case.h  get_payment_use_case.cpp  get_payment_use_case.h
examples/cpp/logos_payment_service_cli/: cli_parser.cpp  cli_parser.h  main.cpp
examples/cpp/logos_payment_service_cli/commands/: authorize_command.cpp  authorize_command.h  get_payment_command.cpp  get_payment_command.h
examples/cpp/logos_payment_service_cli_host/: cli_parser.cpp  cli_parser.h  main.cpp
examples/cpp/logos_payment_service_cli_host/commands/: authorize_command.cpp  authorize_command.h  get_payment_command.cpp  get_payment_command.h
examples/cpp/logos_payment_service_core/application/container/: service_container.h
examples/cpp/logos_payment_service_core/application/contracts/: authorize_payment_request.h  authorize_payment_response.h  get_payment_response.h
examples/cpp/logos_payment_service_core/application/use_cases/: authorize_payment_use_case.cpp  authorize_payment_use_case.h  (+2 more)
examples/cpp/logos_payment_service_core/capabilities/: fraud_detection_service.h  payment_repository.h
examples/cpp/logos_payment_service_core/shared_kernel/: money.cpp  money.h  payment_record.h  payment_status.h
examples/cpp/logos_payment_service_domain/abstractions/: fraud_detection_service.h  payment_repository.h
examples/cpp/logos_payment_service_domain/services/: payment_authorization_service.cpp  payment_authorization_service.h
examples/cpp/logos_payment_service_domain/value_objects/: money.cpp  money.h  payment_record.h  payment_status.h
examples/cpp/logos_payment_service_http_host/: main.cpp
examples/cpp/logos_payment_service_http_host/configuration/: http_server.cpp  http_server.h
examples/cpp/logos_payment_service_http_host/controllers/: payments_controller.cpp  payments_controller.h
examples/cpp/logos_payment_service_http_host/mappings/: payment_dto.cpp  payment_dto.h
examples/cpp/logos_payment_service_infrastructure/: in_memory_payment_repository.cpp  in_memory_payment_repository.h  simple_fraud_detection_service.cpp  simple_fraud_detection_service.h
examples/cpp/logos_payment_service_rabbitmq_host/: README.md  main.cpp
examples/cpp/logos_payment_service_rabbitmq_host/configuration/: rabbitmq_configuration.h  rabbitmq_host.cpp  rabbitmq_host.h
examples/cpp/logos_payment_service_rabbitmq_host/consumers/: authorize_payment_consumer.cpp  authorize_payment_consumer.h
examples/cpp/logos_payment_service_rabbitmq_host/mappings/: message_mapping.cpp  message_mapping.h
examples/cpp/logos_payment_service_rabbitmq_host/messages/: authorize_payment_command.h  payment_authorized_event.h
examples/cpp/mypaymentservice_cli_host/: cli_parser.cpp  cli_parser.h  main.cpp
examples/cpp/mypaymentservice_cli_host/commands/: authorize_command.cpp  authorize_command.h  get_payment_command.cpp  get_payment_command.h
examples/cpp/mypaymentservice_core/capabilities/: fraud_detection_service.h  payment_repository.h
examples/cpp/mypaymentservice_core/shared_kernel/: money.cpp  money.h  payment_record.h  payment_status.h
examples/cpp/mypaymentservice_http_host/: main.cpp
examples/cpp/mypaymentservice_http_host/configuration/: http_server.cpp  http_server.h
examples/cpp/mypaymentservice_http_host/controllers/: payments_controller.cpp  payments_controller.h
examples/cpp/mypaymentservice_http_host/mappings/: payment_dto.cpp  payment_dto.h
examples/cpp/mypaymentservice_infrastructure/: in_memory_payment_repository.cpp  in_memory_payment_repository.h  simple_fraud_detection_service.cpp  simple_fraud_detection_service.h
examples/cpp/mypaymentservice_rabbitmq_host/: README.md  main.cpp
examples/cpp/mypaymentservice_rabbitmq_host/configuration/: rabbitmq_configuration.h  rabbitmq_host.cpp  rabbitmq_host.h
examples/cpp/mypaymentservice_rabbitmq_host/consumers/: authorize_payment_consumer.cpp  authorize_payment_consumer.h
examples/cpp/mypaymentservice_rabbitmq_host/mappings/: message_mapping.cpp  message_mapping.h
examples/cpp/mypaymentservice_rabbitmq_host/messages/: authorize_payment_command.h  payment_authorized_event.h
(+207 files in other folders)
